[FI-63] 예외처리 핸들러 수정